--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -198,21 +198,22 @@
                                 <rect key="frame" x="8" y="76" width="359" height="100"/>
                                 <subviews>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ba0-Xg-o6E" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="277" y="33" width="64" height="26"/>
+                                        <rect key="frame" x="287" y="33" width="64" height="26"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Icb-FA-TAT" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Icb-FA-TAT" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="64" height="26"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="26" id="nhg-iS-BmZ"/>
                                                     <constraint firstAttribute="width" constant="64" id="o8J-5o-h8J"/>
                                                 </constraints>
-                                                <color key="tintColor" name="Danger"/>
+                                                <color key="tintColor" name="warning"/>
+                                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="8" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Block" image="circle.slash.fill" catalog="system"/>
+                                                <state key="normal" image="star.fill" catalog="system"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
-                                                        <color key="value" name="warning"/>
+                                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="4"/>
@@ -235,11 +236,10 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rice University, Houston TX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzF-aI-iJF" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="98" y="56" width="171" height="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rice University, Houston TX" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzF-aI-iJF" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                        <rect key="frame" x="98" y="45" width="253" height="17.333333333333329"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="171" id="Zgs-uT-uNZ"/>
-                                            <constraint firstAttribute="height" constant="14" id="rfJ-K0-bZb"/>
+                                            <constraint firstAttribute="width" constant="253" id="Zgs-uT-uNZ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -249,16 +249,15 @@
                                                 <color key="value" name="Text grey"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="12"/>
+                                                <real key="value" value="15"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Professor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOG-bk-97u" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="98" y="71" width="120" height="13"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Professor" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOG-bk-97u" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                        <rect key="frame" x="98" y="60.33333333333335" width="253" height="17.333333333333336"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="13" id="17N-gi-7FE"/>
-                                            <constraint firstAttribute="width" constant="120" id="niB-xs-mxA"/>
+                                            <constraint firstAttribute="width" constant="253" id="niB-xs-mxA"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -268,16 +267,16 @@
                                                 <color key="value" name="Text grey"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="12"/>
+                                                <real key="value" value="15"/>
                                             </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TAMARA PENSIERO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpP-cf-H6r" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="98" y="30" width="171" height="32"/>
+                                        <rect key="frame" x="98" y="20" width="218" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="iAn-Le-kxi"/>
-                                            <constraint firstAttribute="width" constant="171" id="jWS-Ex-jt4"/>
+                                            <constraint firstAttribute="width" constant="218" id="jWS-Ex-jt4"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -321,11 +320,11 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="Ba0-Xg-o6E" firstAttribute="leading" secondItem="dpP-cf-H6r" secondAttribute="trailing" constant="8" id="3GD-UH-Emc"/>
-                                    <constraint firstItem="nzF-aI-iJF" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="56" id="4gZ-Ck-C2G"/>
+                                    <constraint firstItem="Ba0-Xg-o6E" firstAttribute="leading" secondItem="dpP-cf-H6r" secondAttribute="trailing" constant="-29" id="3GD-UH-Emc"/>
+                                    <constraint firstItem="nzF-aI-iJF" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="45" id="4gZ-Ck-C2G"/>
                                     <constraint firstItem="dpP-cf-H6r" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="4wQ-cl-FVk"/>
-                                    <constraint firstItem="dpP-cf-H6r" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="30" id="Gka-ED-7Xx"/>
-                                    <constraint firstItem="HOG-bk-97u" firstAttribute="top" secondItem="nzF-aI-iJF" secondAttribute="bottom" constant="1" id="HAY-KS-sQB"/>
+                                    <constraint firstItem="dpP-cf-H6r" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="20" id="Gka-ED-7Xx"/>
+                                    <constraint firstItem="HOG-bk-97u" firstAttribute="top" secondItem="nzF-aI-iJF" secondAttribute="bottom" constant="-2" id="HAY-KS-sQB"/>
                                     <constraint firstAttribute="bottom" secondItem="Ba0-Xg-o6E" secondAttribute="bottom" constant="41" id="JsG-hh-Kc8"/>
                                     <constraint firstItem="Ba0-Xg-o6E" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="33" id="JuP-UL-yJk"/>
                                     <constraint firstItem="HOG-bk-97u" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="Mh7-qV-rLn"/>
@@ -334,7 +333,7 @@
                                     <constraint firstItem="bc3-O3-AQ1" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="18" id="XDK-7Z-5lo"/>
                                     <constraint firstItem="nzF-aI-iJF" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="eHu-Jk-dY9"/>
                                     <constraint firstAttribute="height" constant="100" id="gcb-vs-XfG"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ba0-Xg-o6E" secondAttribute="trailing" constant="18" id="jmB-TO-4Zx"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ba0-Xg-o6E" secondAttribute="trailing" constant="8" id="jmB-TO-4Zx"/>
                                     <constraint firstAttribute="width" constant="359" id="q11-r0-cBj"/>
                                 </constraints>
                             </view>
@@ -537,6 +536,7 @@
                 <outlet property="profilePicBtn" destination="bc3-O3-AQ1" id="JkI-ZV-GN9"/>
                 <outlet property="profileView" destination="cn8-Nl-EBJ" id="Z9o-6i-PeL"/>
                 <outlet property="ratingView" destination="Ba0-Xg-o6E" id="YMS-bZ-IIJ"/>
+                <outlet property="rattingBtn" destination="Icb-FA-TAT" id="1rz-JU-zVR"/>
                 <outlet property="searchBtn" destination="xIG-8U-5nc" id="UsV-3R-AUg"/>
                 <outlet property="searchTF" destination="Xet-Wr-pR1" id="m59-jb-5gp"/>
                 <outlet property="searchTFView" destination="sja-AP-Tc4" id="ELW-Ro-pSa"/>
@@ -555,22 +555,22 @@
     </objects>
     <designables>
         <designable name="6BT-Eq-hcD">
-            <size key="intrinsicContentSize" width="73.333333333333329" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="134" height="32.333333333333336"/>
         </designable>
         <designable name="A8B-bt-df2">
-            <size key="intrinsicContentSize" width="337.33333333333331" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="241" height="14"/>
         </designable>
         <designable name="Baj-Qv-s2c">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="Cf5-Cq-dE3">
-            <size key="intrinsicContentSize" width="81" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="142.33333333333334" height="32.333333333333336"/>
         </designable>
         <designable name="HOG-bk-97u">
-            <size key="intrinsicContentSize" width="73" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="65.333333333333329" height="17.333333333333332"/>
         </designable>
         <designable name="Icb-FA-TAT">
-            <size key="intrinsicContentSize" width="64.666666666666671" height="22"/>
+            <size key="intrinsicContentSize" width="30" height="21.333333333333332"/>
         </designable>
         <designable name="bc3-O3-AQ1">
             <size key="intrinsicContentSize" width="407" height="612"/>
@@ -582,27 +582,27 @@
             <size key="intrinsicContentSize" width="54" height="54"/>
         </designable>
         <designable name="dpP-cf-H6r">
-            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="175.66666666666666" height="21"/>
         </designable>
         <designable name="nax-I1-dp4">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="nzF-aI-iJF">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="189" height="17.333333333333332"/>
         </designable>
         <designable name="pXu-df-J1k">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="159.66666666666666" height="14"/>
         </designable>
         <designable name="v2n-8t-cBj">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="237" height="21"/>
         </designable>
     </designables>
     <resources>
         <image name="bell.badge.fill" catalog="system" width="123" height="128"/>
-        <image name="circle.slash.fill" catalog="system" width="128" height="123"/>
         <image name="girl" width="407" height="612"/>
         <image name="logo name" width="3289" height="512"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="tooltip_icon" width="48" height="48"/>
         <image name="wifi man grey" width="162" height="152"/>
         <namedColor name="Danger">
