--- a/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
@@ -72,10 +72,10 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xUm-Sj-qbE" customClass="CustomToggleButton" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="305.25" y="7.75" width="26.5" height="15.5"/>
+                                        <rect key="frame" x="311.16666666666663" y="11.583333333333334" width="14.333333333333314" height="7.8333333333333339"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="31" id="7QG-He-LjK"/>
-                                            <constraint firstAttribute="width" constant="47" id="dKM-t8-AJW"/>
+                                            <constraint firstAttribute="height" constant="15.5" id="7QG-He-LjK"/>
+                                            <constraint firstAttribute="width" constant="22.5" id="dKM-t8-AJW"/>
                                         </constraints>
                                         <color key="onTintColor" name="Secondary Grey"/>
                                         <userDefinedRuntimeAttributes>
@@ -93,13 +93,13 @@
                                     <constraint firstItem="jLp-rH-ZeA" firstAttribute="leading" secondItem="Rtt-Zr-LA8" secondAttribute="leading" constant="8" id="8oS-4j-kCn"/>
                                     <constraint firstItem="5Zd-77-ahs" firstAttribute="leading" secondItem="jLp-rH-ZeA" secondAttribute="trailing" id="A6c-HV-aPv"/>
                                     <constraint firstAttribute="bottom" secondItem="jLp-rH-ZeA" secondAttribute="bottom" constant="5" id="DHe-eJ-JWv"/>
-                                    <constraint firstItem="xUm-Sj-qbE" firstAttribute="top" secondItem="Rtt-Zr-LA8" secondAttribute="top" id="QDX-hb-xvp"/>
+                                    <constraint firstItem="xUm-Sj-qbE" firstAttribute="top" secondItem="Rtt-Zr-LA8" secondAttribute="top" constant="7.75" id="QDX-hb-xvp"/>
                                     <constraint firstItem="jLp-rH-ZeA" firstAttribute="top" secondItem="Rtt-Zr-LA8" secondAttribute="top" constant="4" id="U9M-wk-Hdh"/>
                                     <constraint firstAttribute="bottom" secondItem="5Zd-77-ahs" secondAttribute="bottom" constant="8" id="hAj-bu-fhj"/>
                                     <constraint firstAttribute="height" constant="30" id="iwz-CU-Xmp"/>
                                     <constraint firstAttribute="width" constant="340" id="jhY-as-ub6"/>
-                                    <constraint firstAttribute="bottom" secondItem="xUm-Sj-qbE" secondAttribute="bottom" constant="-1" id="mvQ-z6-uQu"/>
-                                    <constraint firstAttribute="trailing" secondItem="xUm-Sj-qbE" secondAttribute="trailing" id="rNw-5q-d9M"/>
+                                    <constraint firstAttribute="bottom" secondItem="xUm-Sj-qbE" secondAttribute="bottom" constant="6.75" id="mvQ-z6-uQu"/>
+                                    <constraint firstAttribute="trailing" secondItem="xUm-Sj-qbE" secondAttribute="trailing" constant="12.25" id="rNw-5q-d9M"/>
                                     <constraint firstItem="5Zd-77-ahs" firstAttribute="top" secondItem="Rtt-Zr-LA8" secondAttribute="top" constant="7" id="sGx-Ev-hmI"/>
                                 </constraints>
                             </view>
@@ -122,7 +122,7 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="14"/>
+                                                <real key="value" value="16"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
@@ -160,9 +160,9 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ir-Q9-gZ4" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="4.6666666666666661" width="264" height="21"/>
+                                        <rect key="frame" x="8" y="0.0" width="264" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="jOa-c0-0D7"/>
+                                            <constraint firstAttribute="height" constant="30" id="jOa-c0-0D7"/>
                                             <constraint firstAttribute="width" constant="264" id="k0C-xC-bva"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -175,7 +175,7 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="m"/>
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="14"/>
+                                                <real key="value" value="18"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
@@ -258,10 +258,10 @@
     </objects>
     <designables>
         <designable name="0ir-Q9-gZ4">
-            <size key="intrinsicContentSize" width="30.666666666666668" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="21.333333333333332"/>
         </designable>
         <designable name="3PY-qB-7mJ">
-            <size key="intrinsicContentSize" width="30.666666666666668" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="34.666666666666664" height="19"/>
         </designable>
         <designable name="5Zd-77-ahs">
             <size key="intrinsicContentSize" width="48" height="48"/>
