--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
@@ -97,16 +97,16 @@
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J46-zJ-31Y">
-                                        <rect key="frame" x="76" y="47" width="124" height="24"/>
+                                        <rect key="frame" x="76" y="47" width="125" height="24"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uni-Xu-GDz" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="65" height="20"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="62" height="20"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ChemistryBA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQH-13-OzP" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                                        <rect key="frame" x="2.6666666666666714" y="5" width="60" height="10"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chemistry BA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQH-13-OzP" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                                        <rect key="frame" x="2" y="0.0" width="58" height="20"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="60" id="B23-3r-zEk"/>
-                                                            <constraint firstAttribute="height" constant="10" id="xiT-2X-Icj"/>
+                                                            <constraint firstAttribute="width" constant="58" id="B23-3r-zEk"/>
+                                                            <constraint firstAttribute="height" constant="20" id="xiT-2X-Icj"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
@@ -116,7 +116,7 @@
                                                                 <color key="value" name="Text grey"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                                <real key="value" value="10"/>
+                                                                <real key="value" value="12"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
@@ -128,7 +128,7 @@
                                                     <constraint firstAttribute="height" constant="20" id="7u2-b6-YEl"/>
                                                     <constraint firstItem="dQH-13-OzP" firstAttribute="centerX" secondItem="uni-Xu-GDz" secondAttribute="centerX" id="Q5F-2V-KdU"/>
                                                     <constraint firstItem="dQH-13-OzP" firstAttribute="centerY" secondItem="uni-Xu-GDz" secondAttribute="centerY" id="kMy-EN-w8V"/>
-                                                    <constraint firstAttribute="width" constant="65" id="qE3-qD-iae"/>
+                                                    <constraint firstAttribute="width" constant="62" id="qE3-qD-iae"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -137,13 +137,13 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="alr-5p-jbH" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                                <rect key="frame" x="70" y="0.0" width="51" height="20"/>
+                                                <rect key="frame" x="68" y="0.0" width="51" height="20"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TnH-JF-VfZ" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                                        <rect key="frame" x="3" y="5" width="45" height="10"/>
+                                                        <rect key="frame" x="3" y="3" width="45" height="14"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="45" id="KWl-Jc-Dra"/>
-                                                            <constraint firstAttribute="height" constant="10" id="Qy8-IF-da0"/>
+                                                            <constraint firstAttribute="height" constant="14" id="Qy8-IF-da0"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
@@ -153,7 +153,7 @@
                                                                 <color key="value" name="Text grey"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                                <real key="value" value="10"/>
+                                                                <real key="value" value="12"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
@@ -177,15 +177,15 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="uni-Xu-GDz" firstAttribute="leading" secondItem="J46-zJ-31Y" secondAttribute="leading" id="1SJ-yW-sNd"/>
-                                            <constraint firstAttribute="trailing" secondItem="uni-Xu-GDz" secondAttribute="trailing" constant="59" id="78s-Ck-F1s"/>
+                                            <constraint firstAttribute="trailing" secondItem="uni-Xu-GDz" secondAttribute="trailing" constant="63" id="78s-Ck-F1s"/>
                                             <constraint firstAttribute="bottom" secondItem="uni-Xu-GDz" secondAttribute="bottom" constant="4" id="ClV-Pm-XoA"/>
-                                            <constraint firstItem="alr-5p-jbH" firstAttribute="leading" secondItem="uni-Xu-GDz" secondAttribute="trailing" constant="5" id="H09-fW-gUU"/>
+                                            <constraint firstItem="alr-5p-jbH" firstAttribute="leading" secondItem="uni-Xu-GDz" secondAttribute="trailing" constant="6" id="H09-fW-gUU"/>
                                             <constraint firstItem="alr-5p-jbH" firstAttribute="top" secondItem="J46-zJ-31Y" secondAttribute="top" id="Kfh-dX-DDu"/>
                                             <constraint firstAttribute="bottom" secondItem="alr-5p-jbH" secondAttribute="bottom" constant="4" id="LCd-qU-vJI"/>
                                             <constraint firstAttribute="height" constant="24" id="QdQ-mt-Hla"/>
-                                            <constraint firstAttribute="width" constant="124" id="VGw-Nw-hIi"/>
+                                            <constraint firstAttribute="width" constant="125" id="VGw-Nw-hIi"/>
                                             <constraint firstItem="uni-Xu-GDz" firstAttribute="top" secondItem="J46-zJ-31Y" secondAttribute="top" id="adX-ac-wlG"/>
-                                            <constraint firstAttribute="trailing" secondItem="alr-5p-jbH" secondAttribute="trailing" constant="3" id="zbo-d4-5o7"/>
+                                            <constraint firstAttribute="trailing" secondItem="alr-5p-jbH" secondAttribute="trailing" constant="6" id="zbo-d4-5o7"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bachelor, Student " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8f-h1-ksg" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
@@ -216,7 +216,7 @@
                                     <constraint firstItem="J46-zJ-31Y" firstAttribute="leading" secondItem="rdD-aP-nm5" secondAttribute="trailing" constant="8" symbolic="YES" id="7ZW-yk-VbC"/>
                                     <constraint firstItem="0FG-gI-S06" firstAttribute="top" secondItem="gAw-H9-ySR" secondAttribute="bottom" constant="1" id="Frq-n1-WZH"/>
                                     <constraint firstItem="s8f-h1-ksg" firstAttribute="top" secondItem="0FG-gI-S06" secondAttribute="bottom" constant="8" id="HcR-fy-CQO"/>
-                                    <constraint firstItem="s8f-h1-ksg" firstAttribute="leading" secondItem="J46-zJ-31Y" secondAttribute="trailing" constant="4" id="Jvh-s8-DQv"/>
+                                    <constraint firstItem="s8f-h1-ksg" firstAttribute="leading" secondItem="J46-zJ-31Y" secondAttribute="trailing" constant="3" id="Jvh-s8-DQv"/>
                                     <constraint firstItem="0FG-gI-S06" firstAttribute="leading" secondItem="rdD-aP-nm5" secondAttribute="trailing" constant="8" symbolic="YES" id="QAz-Ky-zs4"/>
                                     <constraint firstAttribute="trailing" secondItem="sDz-s6-jzy" secondAttribute="trailing" constant="8" id="VL1-sa-b0p"/>
                                     <constraint firstAttribute="bottom" secondItem="s8f-h1-ksg" secondAttribute="bottom" constant="9" id="VlR-ZV-0ny"/>
@@ -247,27 +247,11 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DSX-2l-559" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="19" y="9" width="356" height="78"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="78" id="A3V-NR-dzB"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="DSX-2l-559" secondAttribute="trailing" id="8cV-wu-Pwp"/>
                             <constraint firstItem="Cmn-D6-cVd" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="MsH-EI-w7i"/>
-                            <constraint firstAttribute="bottom" secondItem="DSX-2l-559" secondAttribute="bottom" constant="8" id="N9d-Iv-Kup"/>
-                            <constraint firstItem="DSX-2l-559" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="OKD-FR-erN"/>
                             <constraint firstAttribute="trailing" secondItem="Cmn-D6-cVd" secondAttribute="trailing" constant="19" id="Uqh-QD-IBi"/>
-                            <constraint firstItem="DSX-2l-559" firstAttribute="top" secondItem="22m-mJ-RUv" secondAttribute="top" constant="9" id="axx-60-ruC"/>
                             <constraint firstItem="Cmn-D6-cVd" firstAttribute="top" secondItem="22m-mJ-RUv" secondAttribute="top" constant="9" id="eda-OJ-yQo"/>
                             <constraint firstAttribute="bottom" secondItem="Cmn-D6-cVd" secondAttribute="bottom" constant="8" id="tWx-Gv-s6F"/>
                             <constraint firstAttribute="height" constant="95" id="uX0-76-WHs"/>
@@ -285,7 +269,6 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="blurView" destination="DSX-2l-559" id="Glp-QU-4fR"/>
                 <outlet property="educationLbl" destination="0FG-gI-S06" id="vnS-Mi-B4P"/>
                 <outlet property="nameLbl" destination="gAw-H9-ySR" id="du7-RQ-8VY"/>
                 <outlet property="nonBlurView" destination="Cmn-D6-cVd" id="IDq-qT-j5S"/>
@@ -302,22 +285,22 @@
     </objects>
     <designables>
         <designable name="0FG-gI-S06">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="122.66666666666667" height="12"/>
         </designable>
         <designable name="TnH-JF-VfZ">
-            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="37.666666666666664" height="14.333333333333334"/>
         </designable>
         <designable name="dQH-13-OzP">
-            <size key="intrinsicContentSize" width="99.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="72.666666666666671" height="14.333333333333334"/>
         </designable>
         <designable name="gAw-H9-ySR">
-            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
         </designable>
         <designable name="rdD-aP-nm5">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="s8f-h1-ksg">
-            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="115" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
